--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./mixins.scss";
 
 .post-topic{
     margin: 0 4px;
@@ -29,17 +30,7 @@ ul {
     list-style-type: none;
 }
 
-.home {
-    height: 100vh;
-    width: 66vw;
-
-    display: grid;
-    align-content: space-around;
-    justify-items: stretch;
-    //grid-template-rows: 1fr 2fr 1fr;
-    
-}
-
-
 @import "./searchBar.scss";
 @import "./recentPost.scss";
+@import "./home.scss";
+@import "./results.scss";
