--- a/src/style/searchBar.scss
+++ b/src/style/searchBar.scss
@@ -11,9 +11,6 @@
             border: 0px solid transparent;
             border-radius: 5px;
     
-            height: 118px;
-            font-size: 40px;
-    
             transition: all 0.3s ease;
     
             &::placeholder {
@@ -34,4 +31,21 @@
         }
     }
     
+}
+
+.search-bar-home {
+    align-content: center;
+    justify-items: center;
+    input {
+        height: 118px;
+        font-size: 40px;
+    }
+}
+.search-bar-results {
+    align-content: start;
+    justify-items: center;
+    input {
+        font-size: 22px;
+        height: 36px;
+    }
 }
