--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -37,6 +37,22 @@
 
     }
     .result-post-links{
+        //display: flex;
+    }
+}
 
+.post_link {
+    min-height: 70px;
+    display: flex;
+    
+    .post-link-box {
+        min-width: 70px;
+        background-color: $color-grey-two;
+        margin-right: 18px;
+    }
+    .post-link-link a {
+        color: $color-grey-three;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
