--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,6 +30,11 @@ ul {
     list-style-type: none;
 }
 
+.no-content {
+    color: $color-grey-one;
+    font-size: 14px;
+    line-height: 17px;
+}
 @import "./searchBar.scss";
 @import "./recentPost.scss";
 @import "./home.scss";
