--- a/src/style/recentPost.scss
+++ b/src/style/recentPost.scss
@@ -12,10 +12,12 @@
             color: $color-blue-one;
             font-size: 14px;
         }
-        .recent-post-posts {
+        .recent-posts-posts {
             display: grid;
             justify-content: space-evenly;
-            grid-template-columns: repeat(3, 1fr);
+            @media screen and (min-width: 700px) {
+                grid-template-columns: 1fr 1fr 1fr;
+            } 
             grid-gap: 42px
         }
     }
